# BRN-DACL

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.backend  Dockerfile.mcp  MCP_README.md  README.md  convert_massive_rules.py  dacl_mcp_server.py  docker-compose.yml  external_agent_demo.py  pyproject.toml  skills-lock.json
compiled/: actions.db  freight_policy_graph.json  hr_policy_graph.json  nexus_insurance_group_insurance.json  nexus_insurance_master.json  nexus_insurance_meta.json  nexus_insurance_source_v1.txt  nexus_insurance_v1.json  nexus_nus_insur.json  nexus_nus_insur_source.txt  tagent_policy_tagent_policy_meta.json  tagent_policy_tagent_policy_source_v1.txt  tagent_policy_tagent_policy_v1.json  tagent_workflow_rules.json  users.db
examples/: tagent_example.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: Layout.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AdminDashboard.jsx  ApiHub.jsx  Login.jsx  McpDocs.jsx  QueryTester.jsx  ReaderDashboard.jsx  SimulationDashboard.jsx  UsersManager.jsx
sample_docs/: nexus_insurance_1000_rules.txt
scripts/: convert_massive_rules.py
src/compiled/: actions.db  hr_policy_graph.json  users.db
src/dacl_agent/: __init__.py  dacl_mcp_server.py  main.py  server.py
src/dacl_agent/core/: auth.py  authz.py
src/dacl_agent/models/: schemas.py
tests/: test_compiler.py  test_mcp.py  test_upload.py
tests/data/: simulation_test.csv  tagent_simulation.csv
(+9 files in other folders)
